--- a/config.yaml
+++ b/config.yaml
@@ -17,7 +17,7 @@ find-process-mode: always
 global-client-fingerprint: chrome
 external-controller: 0.0.0.0:9090
 #面板默认Meta 可选Yacd 清除浏览器缓存即可重新加载
-external-ui: /data/adb/box_bll/panel/Meta/ #/Meta/Yacd
+external-ui: /data/adb/box_bll/panel/Meta/ #/Meta #/Yacd
 secret: ""
 
 #####################
@@ -46,8 +46,7 @@ sniffer:
     - "Mijia Cloud"
 
 tun:
-  #请自测已知问题wifi状态下false 无法访问 raw.githubusercontent.com 服务
-  enable: false #true #false
+  enable: false #true 开 #false 关
   device: tun0
   stack: system
   dns-hijack:
@@ -61,9 +60,11 @@ tun:
   - 192.168.0.0/16
   - fc00::/7
   exclude-package:
-  - com.tencent.tmgp.sgame #王者荣耀
-  - com.miui.weather2 #小米天气
-  - com.ss.android.ugc.aweme #抖音
+  - com.tencent.tmgp.sgame
+  - com.miui.weather2
+  - com.ss.android.ugc.aweme
+  - com.xiaomi.market
+  - com.android.providers.downloads.ui
 
 dns:
   enable: true
@@ -77,13 +78,9 @@ dns:
     - "+.lan"
     - "connect.rom.miui.com"
     - "localhost.ptlogin2.qq.com"
-  nameserver-policy:
-   "geosite:category-ads-all": rcode://success
   nameserver:
-    - tls://223.5.5.5
-    - tls://223.6.6.6
-    - tls://1.12.12.12
-    - tls://120.53.53.53  
+    # 这里92用的其实是自己的adguard dns地址
+    - https://doh.pub/dns-query
 
   p: &p
     {type: http, interval: 86400, health-check: {enable: true, url: https://www.gstatic.com/generate_204, interval: 300}}
@@ -95,7 +92,7 @@ dns:
 proxy-providers:
   1.主要地址:
     <<: *p
-    url: "订阅地址填写"
+    url: "引入您的Clash订阅链接地址"
     path: ./proxy_providers/subscribe1.yaml
     
   2.备用地址:
@@ -104,52 +101,44 @@ proxy-providers:
     path: ./proxy_providers/subscribe2.yaml
     
 proxies:
-  - {name: 🌎 全球直连, type: direct, udp: true}
+  - {name: 直连, type: direct, udp: true}
   - {name: DNS_Hijack, type: dns}
 proxy-groups:
-  - {name: 🎯 总模式, type: select, proxies: [🚀 节点选择,♻️ 延迟最低,♻️ 故障转移,♻️ 负载均衡,♻️ 手动切换1,♻️ 手动切换2,♻️ 手动切换3,🌎 全球直连]}
-  - {name: 🚀 节点选择, type: select, proxies: [♻️ 延迟最低,🌎 全球直连], <<: *u}
-  - {name: ♻️ 延迟最低, <<: *u, type: url-test}
-  - {name: ♻️ 故障转移, <<: *u, type: fallback}
-  - {name: ♻️ 负载均衡, <<: *u, type: load-balance, strategy: round-robin}
-  - {name: ♻️ 手动切换1, type: select, proxies: [🚀 节点选择,🌎 全球直连], <<: *u}
-  - {name: ♻️ 手动切换2, type: select, proxies: [🚀 节点选择,🌎 全球直连], <<: *u}
-  - {name: ♻️ 手动切换3, type: select, proxies: [🚀 节点选择,🌎 全球直连], <<: *u}
-  - {name: 📢 谷歌FCM, type: select, proxies: [🚀 节点选择,🌎 全球直连], <<: *u}
-  - {name: 🤖 OpenAI, type: select, proxies: [🎯 总模式,♻️ 延迟最低,♻️ 故障转移,♻️ 负载均衡,♻️ 手动切换1,♻️ 手动切换2,♻️ 手动切换3,🌎 全球直连]}
-  - {name: 📱 脸书社交, type: select, proxies: [🎯 总模式,♻️ 延迟最低,♻️ 故障转移,♻️ 负载均衡,♻️ 手动切换1,♻️ 手动切换2,♻️ 手动切换3,🌎 全球直连]}
-  - {name: 📲 电报信息, type: select, proxies: [🎯 总模式,♻️ 延迟最低,♻️ 故障转移,♻️ 负载均衡,♻️ 手动切换1,♻️ 手动切换2,♻️ 手动切换3,🌎 全球直连]}
-  - {name: 🎬 油管媒体, type: select, proxies: [🎯 总模式,♻️ 延迟最低,♻️ 故障转移,♻️ 负载均衡,♻️ 手动切换1,♻️ 手动切换2,♻️ 手动切换3,🌎 全球直连]}
-  - {name: 📹 奈飞媒体, type: select, proxies: [🎯 总模式,♻️ 延迟最低,♻️ 故障转移,♻️ 负载均衡,♻️ 手动切换1,♻️ 手动切换2,♻️ 手动切换3,🌎 全球直连]}
-  - {name: 📢 谷歌服务, type: select, proxies: [🎯 总模式,♻️ 延迟最低,♻️ 故障转移,♻️ 负载均衡,♻️ 手动切换1,♻️ 手动切换2,♻️ 手动切换3,🌎 全球直连]}
-  - {name: Ⓜ️ 微软服务, type: select, proxies: [🎯 总模式,♻️ 延迟最低,♻️ 故障转移,♻️ 负载均衡,♻️ 手动切换1,♻️ 手动切换2,♻️ 手动切换3,🌎 全球直连]}
-  - {name: 🍎 苹果服务, type: select, proxies: [🎯 总模式,♻️ 延迟最低,♻️ 故障转移,♻️ 负载均衡,♻️ 手动切换1,♻️ 手动切换2,♻️ 手动切换3,🌎 全球直连]}
-  - {name: 🎮 Discord, type: select, proxies: [🎯 总模式,♻️ 延迟最低,♻️ 故障转移,♻️ 负载均衡,♻️ 手动切换1,♻️ 手动切换2,♻️ 手动切换3,🌎 全球直连]}
-  - {name: 📸 TikTok, type: select, proxies: [🎯 总模式,♻️ 延迟最低,♻️ 故障转移,♻️ 负载均衡,♻️ 手动切换1,♻️ 手动切换2,♻️ 手动切换3,🌎 全球直连]}
-  - {name: 🎹 网易音乐「进程匹配」, type: select, proxies: [🌎 全球直连,🎯 总模式,♻️ 延迟最低,♻️ 故障转移,♻️ 负载均衡,♻️ 手动切换1,♻️ 手动切换2,♻️ 手动切换3]}
-  - {name: 🛑 广告拦截, type: select, proxies: [REJECT,🌎 全球直连]}
-  - {name: 🐋 漏网之鱼, type: select, proxies: [🎯 总模式,🌎 全球直连]}
+  - {name: 默认, type: select, proxies: [自动选择, 直连, 香港, 香港自动选择, 台湾, 台湾自动选择, 日本, 日本自动选择, 美国, 美国自动选择, 其它地区, 全部节点], icon: "https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/Proxy.png"}
+  - {name: Google, <<: *pr, icon: "https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/Google_Search.png"}
+  - {name: Google_Fcm, <<: *pr, icon: "https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/CN.png"}
+  - {name: Microsoft, <<: *pr, icon: "https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/Microsoft.png"}
+  - {name: Telegram, <<: *pr, icon: "https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/Telegram.png"}
+  - {name: 国内, type: select, proxies: [直连, 默认, 香港, 香港自动选择, 台湾, 台湾自动选择, 日本, 日本自动选择, 美国, 美国自动选择, 其它地区, 全部节点, 自动选择], icon: "https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/China_Map.png"}
+  - {name: 其他, <<: *pr, icon: "https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/Final.png"}
+    #分隔,下面是地区分组
+  - {name: 香港, type: select, include-all: true, filter: "(?i)港|hk|hongkong|hong kong", icon: "https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/HK.png"}
+  - {name: 台湾, type: select, include-all: true, filter: "(?i)台|tw|taiwan", icon: "https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/TW.png"}
+  - {name: 日本, type: select, include-all: true, filter: "(?i)日|jp|japan", icon: "https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/JP.png"}
+  - {name: 美国, type: select, include-all: true, filter: "(?i)美|us|unitedstates|united states", icon: "https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/US.png"}
+  - {name: 其它地区, type: select, include-all: true, filter: "(?i)^(?!.*(?:🇭🇰|🇯🇵|🇺🇸|🇸🇬|🇨🇳|港|hk|hongkong|台|tw|taiwan|日|jp|japan|新|sg|singapore|美|us|unitedstates)).*", icon: "https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/Available.png"}
+  - {name: 自动选择, type: url-test, include-all: true, tolerance: 10, icon: "https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/Auto.png"}
+  - {name: 全部节点, type: select, include-all: true, icon: "https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/Global.png"}
+
+  - {name: 香港自动选择,type: url-test, include-all: true, filter: "(?i)港|hk|hongkong|hong kong", icon: "https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/HK.png"}
+  - {name: 台湾自动选择,type: url-test, include-all: true, filter: "(?i)台|tw|taiwan", icon: "https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/TW.png"}
+  - {name: 日本自动选择,type: url-test, include-all: true, filter: "(?i)日|jp|japan", icon: "https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/JP.png"}
+  - {name: 美国自动选择,type: url-test, include-all: true, filter: "(?i)美|us|unitedstates|united states", icon: "https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/US.png"}
+
 rule-providers:
-  Ad:
-    behavior: domain
-    type: http
-    url: "https://raw.githubusercontent.com/privacy-protection-tools/anti-AD/master/anti-ad-clash.yaml"
-    interval: 3600
-    format: yaml
-    path: ./Ad.yaml
-  TikTok:
+  GoogleFcm:
     type: http
     behavior: classical
     format: yaml
-    path: ./rule/TikTok.yaml
-    url: "https://raw.githubusercontent.com/MoGuangYu/rules/main/Home/TikTok.yaml"
+    path: ./rule/Googlefcm.yaml
+    url: "https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GoogleFCM/GoogleFCM.yaml"
     interval: 86400
-  Facebook:
+  WeChatFcm:
     type: http
     behavior: classical
     format: yaml
-    path: ./rule/Facebook.yaml
-    url: "https://raw.githubusercontent.com/MoGuangYu/rules/main/Home/Facebook.yaml"
+    path: ./rule/WeChatFcm.yaml
+    url: "https://raw.githubusercontent.com/SherlockChiang/surfing_box4_config/main/Wechat_Fcm.yaml"
     interval: 86400
   Telegram:
     type: http
@@ -157,13 +146,6 @@ rule-providers:
     format: yaml
     path: ./rule/Telegram.yaml
     url: "https://raw.githubusercontent.com/MoGuangYu/rules/main/Home/Telegram.yaml"
-    interval: 86400
-  YouTube:
-    type: http
-    behavior: classical
-    format: yaml
-    path: ./rule/YouTube.yaml
-    url: "https://raw.githubusercontent.com/MoGuangYu/rules/main/Home/YouTube.yaml"
     interval: 86400
   Google:
     type: http
@@ -179,99 +161,17 @@ rule-providers:
     path: ./rule/Microsoft.yaml
     url: "https://raw.githubusercontent.com/MoGuangYu/rules/main/Home/Microsoft.yaml"
     interval: 86400
-  Apple:
-    type: http
-    behavior: classical
-    format: yaml
-    path: ./rule/Apple.yaml
-    url: "https://raw.githubusercontent.com/MoGuangYu/rules/main/Home/Apple.yaml"
-    interval: 86400
-  OpenAI:
-    type: http
-    behavior: classical
-    format: yaml
-    path: ./rule/OpenAI.yaml
-    url: "https://raw.githubusercontent.com/MoGuangYu/rules/main/Home/OpenAI.yaml"
-    interval: 86400
-  Netflix:
-    type: http
-    behavior: classical
-    format: yaml
-    path: ./rule/Netflix.yaml
-    url: "https://raw.githubusercontent.com/MoGuangYu/rules/main/Home/Netflix.yaml"
-    interval: 86400
-  Discord:
-    type: http
-    behavior: classical
-    format: yaml
-    path: ./rule/Discord.yaml
-    url: "https://raw.githubusercontent.com/MoGuangYu/rules/main/Home/Discord.yaml"
-    interval: 86400
+
 rules:
-  - DOMAIN,alt1-mtalk.google.com,📢 谷歌FCM
-  - DOMAIN,alt2-mtalk.google.com,📢 谷歌FCM
-  - DOMAIN,alt3-mtalk.google.com,📢 谷歌FCM
-  - DOMAIN,alt4-mtalk.google.com,📢 谷歌FCM
-  - DOMAIN,alt5-mtalk.google.com,📢 谷歌FCM
-  - DOMAIN,alt6-mtalk.google.com,📢 谷歌FCM
-  - DOMAIN,alt7-mtalk.google.com,📢 谷歌FCM
-  - DOMAIN,alt8-mtalk.google.com,📢 谷歌FCM
-  - DOMAIN,mtalk.google.com,📢 谷歌FCM
-  - IP-CIDR,64.233.177.188/32,📢 谷歌FCM,no-resolve
-  - IP-CIDR,64.233.186.188/32,📢 谷歌FCM,no-resolve
-  - IP-CIDR,64.233.187.188/32,📢 谷歌FCM,no-resolve
-  - IP-CIDR,64.233.188.188/32,📢 谷歌FCM,no-resolve
-  - IP-CIDR,64.233.189.188/32,📢 谷歌FCM,no-resolve
-  - IP-CIDR,74.125.23.188/32,📢 谷歌FCM,no-resolve
-  - IP-CIDR,74.125.24.188/32,📢 谷歌FCM,no-resolve
-  - IP-CIDR,74.125.28.188/32,📢 谷歌FCM,no-resolve
-  - IP-CIDR,74.125.127.188/32,📢 谷歌FCM,no-resolve
-  - IP-CIDR,74.125.137.188/32,📢 谷歌FCM,no-resolve
-  - IP-CIDR,74.125.203.188/32,📢 谷歌FCM,no-resolve
-  - IP-CIDR,74.125.204.188/32,📢 谷歌FCM,no-resolve
-  - IP-CIDR,74.125.206.188/32,📢 谷歌FCM,no-resolve
-  - IP-CIDR,108.177.125.188/32,📢 谷歌FCM,no-resolve
-  - IP-CIDR,142.250.4.188/32,📢 谷歌FCM,no-resolve
-  - IP-CIDR,142.250.10.188/32,📢 谷歌FCM,no-resolve
-  - IP-CIDR,142.250.31.188/32,📢 谷歌FCM,no-resolve
-  - IP-CIDR,142.250.96.188/32,📢 谷歌FCM,no-resolve
-  - IP-CIDR,172.217.194.188/32,📢 谷歌FCM,no-resolve
-  - IP-CIDR,172.217.218.188/32,📢 谷歌FCM,no-resolve
-  - IP-CIDR,172.217.219.188/32,📢 谷歌FCM,no-resolve
-  - IP-CIDR,172.253.63.188/32,📢 谷歌FCM,no-resolve
-  - IP-CIDR,172.253.122.188/32,📢 谷歌FCM,no-resolve
-  - IP-CIDR,173.194.175.188/32,📢 谷歌FCM,no-resolve
-  - IP-CIDR,173.194.218.188/32,📢 谷歌FCM,no-resolve
-  - IP-CIDR,209.85.233.188/32,📢 谷歌FCM,no-resolve
-  - DOMAIN,dns.weixin.qq.com,📢 谷歌服务
-  - DOMAIN,dns.weixin.qq.com.cn,📢 谷歌服务
-  - DOMAIN,minorshort.weixin.qq.com,📢 谷歌服务
-  - DOMAIN,extshort.weixin.qq.com,📢 谷歌服务
-  - DOMAIN,short.weixin.qq.com,📢 谷歌服务
-  - DOMAIN,szshort.weixin.qq.com,📢 谷歌服务
-  - DOMAIN,long.weixin.qq.com,📢 谷歌服务
-  - DOMAIN,szextshort.weixin.qq.com,📢 谷歌服务
-  - DOMAIN,szlong.weixin.qq.com,📢 谷歌服务
-  - DOMAIN,apd-pcdnwxlogin.teg.tencent-cloud.net,📢 谷歌服务
-  - IP-CIDR,45.155.124.0/24,📢 谷歌服务
-  - IP-CIDR,203.205.232.0/24,📢 谷歌服务
-  - IP-CIDR,101.32.104.0/24,📢 谷歌服务
   - DST-PORT,53,DNS_Hijack
   - AND,((PROCESS-NAME,mihomo),(NOT,((IN-TYPE,inner)))),REJECT
   - AND,((PROCESS-NAME,clash),(NOT,((IN-TYPE,inner)))),REJECT
-  - PROCESS-NAME,com.netease.cloudmusic,🎹 网易音乐「进程匹配」
-  - RULE-SET,Discord,🎮 Discord
-  - RULE-SET,TikTok,📸 TikTok
-  - RULE-SET,YouTube,🎬 油管媒体
-  - RULE-SET,Netflix,📹 奈飞媒体
-  - RULE-SET,Facebook,📱 脸书社交
-  - RULE-SET,OpenAI,🤖 OpenAI
-  - RULE-SET,Google,📢 谷歌服务
-  - RULE-SET,Apple,🍎 苹果服务
-  - RULE-SET,Microsoft,Ⓜ️ 微软服务
-  - RULE-SET,Telegram,📲 电报信息
-  - RULE-SET,Ad,🛑 广告拦截
-  - GEOSITE,CN,🌎 全球直连
-  - GEOIP,CN,🌎 全球直连,no-resolve
-  - GEOIP,private,🌎 全球直连,no-resolve
-  - MATCH,🐋 漏网之鱼
+  - RULE-SET,GoogleFcm,Google_Fcm
+  - RULE-SET,WeChatFcm,Google
+  - RULE-SET,Google,Google
+  - RULE-SET,Microsoft,Microsoft
+  - RULE-SET,Telegram,Telegram
+  - GEOSITE,CN,直连
+  - GEOIP,CN,直连,no-resolve
+  - GEOIP,private,直连,no-resolve
+  - MATCH,其他
